Fixed minor issue with JAXB support for JDK 11+